# MergeBathy_Repos-mergeBathy_QT

./: .gitignore
MBGuiApp/: CMakeLists.txt  CMakeLists_v3.txt  CMakeLists_v4.txt  cbass_10x10_xyd.txt  commands.cpp  commands.h  commands_v1.cpp  commands_v2.cpp  main.cpp  main_v3.cpp  main_v4.cpp  mbguiapp.cpp  mbguiapp.h  mbguiapp_v1.cpp  mbguiapp_v1.h  mbguiapp_v2.cpp  mbguiapp_v2.h  mbguiapp_v3.cpp  mbguiapp_v3.h  mbguiapp_v4.cpp  mbguiapp_v4.h  mycanvasview.cpp  mycanvasview.h  mymenuprovider.cpp  mymenuprovider.h  qtcanvas.cpp  qtcanvas.h  qtmbparams.cpp  qtmbparams.h  test.qgs  variantmanager.cpp
MBGuiApp/MergeBathy/extlibs/libs_win/x64/Debug/: vc100.idb
MBGuiApp/MergeBathy/extlibs/libs_win/x86/Release/: beecrypt.res
MBGuiApp/attribute_table/: mbguiappinterface.cpp  mbguiappinterface.h  qgsabout.h  qgsaddattrdialog.h  qgsapplayertreeviewmenuprovider.cpp  qgsattributetabledialog.cpp  qgsattributetabledialog.h  qgsattributetypedialog.cpp  qgsattributetypedialog.h  qgsclipboard.h  qgsdelattrdialog.h  qgsfeatureaction.cpp  qgsfeatureaction.h  qgsfieldcalculator.cpp  qgsfieldcalculator.h  qgsguivectorlayertools.cpp  qgshandlebadlayers.cpp  qgshandlebadlayers.h  qgsidentifyresultsdialog.cpp  qgsidentifyresultsdialog.h  qgslabelpropertydialog.cpp  qgslabelpropertydialog.h  qgsmaptoolchangelabelproperties.h  qgsmaptoolidentifyaction.cpp  qgsmaptoolidentifyaction.h  qgsmaptoollabel.h  qgsmaptoolmovelabel.h  qgsmaptoolpinlabels.cpp  qgsmaptoolpinlabels.h  qgsmaptoolrotatefeature.cpp  qgsmaptoolrotatefeature.h  qgsmaptoolrotatelabel.cpp  qgsmaptoolrotatelabel.h  qgsmaptoolrotatepointsymbols.cpp  qgsmaptoolrotatepointsymbols.h  qgsmaptoolselect.h  qgsmaptoolselectfreehand.h  qgsmaptoolselectpolygon.h  qgsmaptoolselectradius.h  qgsmaptoolselectrectangle.h  (+18 more)
MBGuiApp/attribute_table/gui/attributetable/: qgsfieldconditionalformatwidget.h
MBGuiApp/attribute_table/nodetool/: qgsmaptoolnodetool.cpp  qgsselectedfeature.cpp
MBGuiApp/cmake_find_rules/: FindGEOS.cmake  FindQGIS.cmake
MBGuiApp/data/: 20030820_21_22_10x10_xyd.txt  new1.csv  new1.txt  new2.csv  new2.txt
MBGuiApp/propertybrowserextension/: fileedit.cpp
MBGuiApp/ui/: mbguiappbase.ui  setdatapathdialog.ui
supplemental_materials/: MBGuiApp_RoadMap.docx  MBGuiApp_ThingsToDo.docx  Qt_Setup_v3.docx  qt4_env_startup_qgis-ltr_RUN_ME.bat  qt5_env_startup_qgis-dev_RUN_ME.bat
